--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "csv-parse": "^5.6.0",
     "csv-stringify": "^6.5.2",
+    "dotenv": "^16.5.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
