--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "mechatroner.rainbow-csv",
-    "grapecity.gc-excelviewer"
-  ]
+  "recommendations": ["mechatroner.rainbow-csv", "grapecity.gc-excelviewer"]
 }
