--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     // To use `await` directly in code without wrapping it in an async function
-    "target": "es2017", 
+    "target": "es2017",
 
     // Treat files as modules even if it doesn't use import/export
     "moduleDetection": "force",
@@ -19,6 +19,6 @@
     "esModuleInterop": true,
 
     // Disallow features that require cross-file awareness
-    "isolatedModules": true,
+    "isolatedModules": true
   }
 }
