Add VS Code configuration files and documentation for development setup

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,9 @@
 {
-  "recommendations": ["mechatroner.rainbow-csv", "grapecity.gc-excelviewer"]
+  "recommendations": [
+    "ms-vscode.js-debug-nightly",
+    "esbenp.prettier-vscode",
+    "ms-vscode.vscode-typescript-next",
+    "mechatroner.rainbow-csv",
+    "grapecity.gc-excelviewer"
+  ]
 }
