feat: add interactive script and dependencies for grade book management
- Introduced an interactive TypeScript script for managing grade book processes.
- Added dependencies: @inquirer/prompts for user prompts and chalk for styled console output.
- Implemented functions for processing grades, aggregating data, preparing Canvas and SIS imports, generating charts, and creating student reports.
- Enhanced user experience with clear prompts and status updates throughout the workflow.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Ali Madooei",
   "license": "MIT",
   "scripts": {
+    "interactive": "tsx --no-warnings ./src/interactive.ts",
     "process": "tsx --no-warnings ./src/process.ts",
     "aggregate": "tsx --no-warnings ./src/aggregate.ts",
     "canvas": "tsx --no-warnings ./src/canvas.ts",
@@ -17,6 +18,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@inquirer/prompts": "^8.0.1",
+    "chalk": "^5.6.2",
     "chart.js": "^4.4.9",
     "chartjs-node-canvas": "^5.0.0",
     "chartjs-plugin-datalabels": "^2.2.0",
